# streaming_service_analysis_churn

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  check_and_fix.ps1  check_cfg.py  docker-compose.yml  main.py  mlflow.db  pyproject.toml  requirements.txt  run.py  temp.py
.github/workflows/: README.md  ci-cd-compose.yml  ci.yml  data-drift.yml  main.yml  pr-check.yml  train.yml
app/: components.py  dashboard.py  main_dash.py  services.py
configs/: base.yaml  config.yaml  model.yaml  paths.yaml
data/: Streaming.csv
data/interim/: feature_importance.csv
data/processed/: .gitignore  streaming_clean.csv  streaming_clean.csv.dvc
data/raw/: streaming.csv.dvc
docker/: Dockerfile
mlflow_data/: mlflow.db
mlruns/0/: meta.yaml
mlruns/664393687751222577/: meta.yaml
models/: baseline.py  xgboost.py
models/artifacts/: best_model_params.yaml  churn_model_v1.joblib  xgb_v1_metrics.json
notebook/: Customer_Lifetime_Value.ipynb  predictive-analysis-churn-model-xgboost.ipynb  requirements.txt
notebooks/: customer_churn_insights.ipynb.ipynb
reports/: xgb_v1_metrics.md
scripts/: evaluate_model.py  promote_model.py
src/: config.py  data_cleaner.py  data_loader.py  eda.py  feature_engineering.py  finance.py  pipeline.py  preprocessing.py  run.py  styles.py
src/app/: components.py  dashboard.py  services.py
src/config/: loader.py
src/data/: data_loader.py
src/features/: feature_engineering.py  validation.py
src/models/: baseline.py  xgboost.py
src/pipelines/: app.py  (+3 more)
tests/: test_features.py  test_pipeline.py  test_validation.py
(+100 files in other folders)
