[project]
name = "streaming-churn-prediction"
version = "1.1.0"
description = "End-to-end churn propensity engine using XGBoost and Optuna."
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "optuna>=3.4.0",
    "mlflow>=2.8.0",
    "joblib>=1.3.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.0",
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "shap>=0.43.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.10.0",
    "isort>=5.12.0",
    "flake8>=6.1.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v --durations=5" # Mostra os 5 testes mais lentos e aumenta a verbosidade

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
